# NDKCodec

./: local.properties  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jz/codec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/cpp/camera/: CameraEngine.cpp  CameraEngine.h  CameraListener.cpp  ManagerCamera.cpp  ManagerCamera.h
app/src/main/cpp/codec/: Codec.h  G711Encoder.cpp  G711Encoder.h  H264Encoder.cpp  H264Encoder.h
app/src/main/cpp/include/: ALog.h  CameraUtil.cpp  CameraUtil.h
app/src/main/cpp/opengl/: CodecInputSurface.cpp  CodecInputSurface.h  EGLHelper.cpp  EGLHelper.h
app/src/main/java/com/jz/codec/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jz/codec/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
